# PyEulerALE

./: .gitignore  README.md  fortitude.toml  meson.build  pyproject.toml  ruff.toml
.github/workflows/: tests.yml
examples/gain/: Ma0p10.out  Ma0p15.out  Ma0p20.out  Ma0p25.out  Ma0p30.out  Ma0p35.out  Ma0p40.out  Ma0p45.out  Ma0p50.out  prandtl.gpi  run.py
examples/grids/: naca0004_129x129.plot3d  naca0004_129x385.plot3d  naca0004_257x257.plot3d  naca0004_65x193.plot3d  naca0004_65x65.plot3d  naca0004_9x25.plot3d  naca0012_129x129.plot3d  naca0012_257x257.plot3d  naca0012_65x65.plot3d
examples/response/: Ma0p05.out  Ma0p5.out  Ref_Ma0p0.csv  Ref_Ma0p5.csv  bode.gnuplot  bode.gpi  run.py  sinusoidal.gnuplot  sinusoidal.gpi
examples/steady/: cp.gnuplot  run.py
examples/steady/expected/: cp.csv  cp.gnuplot  cp_xfoil.csv  run.out
src/: spatial_discretization.f90
src/py_euler_ale/: __init__.py  core.py  utils.py
tests/: naca0012_8x9.plot3d  test_linearization.py
